@@ -43,6 +43,8 @@ export(pull_ith)
 export(pull_string)
 export(rebuildPackage)
 export(regression)
+export(regressionStepwise)
+export(removeOutlierObservations)
 export(returns)
 export(scientificLabels)
 export(showCoeftest)
